2024-01-15 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/peep.def:
	  Fix bug in peephole load 12 rule.

2023-01-15 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/scripts/sdcc.nsi:
	  Fix bug #3695.

2023-01-14 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/pdk/gen.c,
	  src/pdk/ralloc.c,
	  src/pdk/ralloc2.cc:
	  Optimize pdk register packing for some operations on __sfr (part of RFE #801).

2024-01-13 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/gen.c:
	  Fix constanRange regression failure for mos6502-stack-auto.
	  Implement special case for genCompare < 0
	* src/mos6502/ralloc2.cc:
	  Add instruction cost for IPUSH_VALUE_AT_ADDRESS icode.
	* src/mos6502/peep.def:
	  Add several new rules that take advantage of if used().
	* support/regression/ports/uc6502-stack-auto/spec.mk,
	  support/regression/tests/gcc-torture-execute-20010129-1.c,
	  support/regression/tests/gcc-torture-execute-20030916-1.c,
	  support/regression/tests/gcc-torture-execute-20071030-1.c,
	  support/regression/tests/gcc-torture-execute-930614-2.c,
	  support/regression/tests/gcc-torture-execute-930628-1.c,
	  support/regression/tests/gcc-torture-execute-990513-1.c,
	  support/regression/tests/gcc-torture-execute-ssad-run.c,
	  support/regression/tests/gcc-torture-execute-usad-run.c,
	  support/regression/tests/lonesha256.c,
	  support/regression/tests/tinyaes.c.in:
	  disable tests failing in the mos6502-stack-auto port due to stack size limitation.
  	* src/mos6502/main.c:
      Rearrange memory segments to support systems without ROM space.
   	* src/mos6502/gen.c,
   	  src/mos6502/ralloc.h:
   	  Remove dead code to support registers in reverse order.
      	  
2024-01-12 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/gen.c:
	  Improve asmopToBool.

2023-01-12 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/hc08/main.c:
	  Fix bug #3690.

2024-01-12 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/pdk/peep.c:
	  Improve pdk notUsed() accuracy.