@@ -12,9 +12,25 @@ replace restart {
 } by {
 	sta	%1
 	stx	%2
-    ; Peephole Function Entry  - eliminated unnecessary lda
+    ; Peephole Function_Entry_1 - eliminated unnecessary lda %1
 	sta	%3
-    ; Peephole Function Entry  - eliminated unnecessary lda
+    ; Peephole Function_Entry_1 - eliminated unnecessary lda %2
+	stx	%4
+} if notVolatile(%1), notVolatile(%2)
+
+replace restart {
+	sta	%1
+	stx	%2
+	lda	%2
+	sta	%4
+	lda	%1
+	sta	%3
+} by {
+	sta	%1
+	stx	%2
+    ; Peephole Function_Entry_1a - eliminated unnecessary lda %1
+	sta	%3
+    ; Peephole Function_Entry_1a - eliminated unnecessary lda %2
 	stx	%4
 } if notVolatile(%1), notVolatile(%2)
 
@@ -26,7 +42,18 @@ replace restart {
 } by {
 	sta	%1
 	stx	%2
-    ; Peephole Function Entry  - eliminated redundant lda/ldx
+    ; Peephole Function_Entry_2 - eliminated redundant lda %1/ldx %2
+} if notVolatile(%1), notVolatile(%2)
+
+replace restart {
+	sta	%1
+	stx	%2
+	ldx     %2
+	lda     %1
+} by {
+	sta	%1
+	stx	%2
+    ; Peephole Function_Entry_2a - eliminated redundant lda %1/ldx %2
 } if notVolatile(%1), notVolatile(%2)
 
 replace restart {
