@@ -2,6 +2,9 @@
 
 	* src/mos6502/peep.def:
 	  Fix bug in peephole load 12 rule.
+  	* src/mos6502/gen.c,
+	  src/mos6502/peep.def:
+	  Improvements in genCast(), genCopy() and loadRegFromAop().
 
 2023-01-15 Philipp Klaus Krause <philipp@colecovision.eu>
 
